--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 
 # OMDb API Key (Required)
 # Get your free API key from: https://www.omdbapi.com/apikey.aspx
-OMDB_API_KEY=fb7fab91
+OMDB_API_KEY=
 
 # Optional: Enable debug mode
 DEBUG_MODE=false
